@@ -2,7 +2,7 @@ from five import grok
 from plone.directives import dexterity, form
 
 from zope import schema
-from zope.interface import Interface, alsoProvides
+from zope.interface import Interface, alsoProvides, invariant
 from z3c.form.browser.radio import RadioFieldWidget
 from z3c.form.browser.checkbox import CheckBoxFieldWidget
 #from z3c.relationfield.schema import RelationChoice, RelationList
@@ -17,7 +17,8 @@ from plone.formwidget.autocomplete import AutocompleteMultiFieldWidget, \
         AutocompleteFieldWidget
 
 
-from tdh.metadata import config, interfaces, sources, widgets, vocabularies
+from tdh.metadata import config, interfaces, sources, widgets, validation, \
+        vocabularies
 from tdh.metadata import MessageFactory as _
 
 
@@ -164,6 +165,15 @@ class IDatasetRecord(form.Schema):
       title=_(u"Research End Date"),
       description=_(u"Enter the date you finished or will finish the research."),
     )
+
+    @invariant
+    def valid_date_range(data):
+        start = data.temporal_coverage_start
+        end = data.temporal_coverage_end
+        if (start is not None and end is not None) and start > end:
+            raise validation.StartBeforeEnd(\
+                _(u"The start date must be before the end date."))
+
 
     spatial_coverage_text = schema.Text(
       title=_(u"Spatial Coverage (Textual Description)"),
